member deleted working through swagger ui, need to test it properly
